--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[11]['City'] = N\n",
+    "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
